Ajustes visuais na visão de coleção e filtro

--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -429,6 +429,8 @@ dd.image-caption {
       font-family: inherit !important;
       border: none;
       text-align: left;
+      font-size: 0.875rem;
+      font-weight: 500;
     }
   }
   .tileImage img {
