--- a/webpack/app/scss/_search.scss
+++ b/webpack/app/scss/_search.scss
@@ -23,8 +23,8 @@
     input.searchPage {
         border: none;
         font-size: 1rem !important;
-        font-weight: 600;
-        margin-left: 15px;
+        font-weight: 500;
+        margin-left: 0.875rem;
     }
     #content-core input[type="text"] {
         width: 800px;
@@ -51,6 +51,10 @@
     #results {
         width: 100%;
         margin-left: 12px;
+    }
+    .description {
+        font-weight: 500;
+        color: #333;
     }
 }
 #search-results-wrapper {
@@ -114,17 +118,24 @@
     width: 100%;
     margin-left: 30px;
 
+    fieldset {
+        margin-right: 115px;
+        min-width: 150px;
+    }
+
     .field {
         background: transparent;
-        padding: 0 40px 0 0;
+        padding: 0;
     }
     div {
         float: none !important;
     }
     legend {
-        padding: 20px 40px 20px 0 !important;
+        padding: 20px 40px 15px 0 !important;
         text-transform: uppercase;
-        font-size: 0.83rem;
+        font-size: 0.83rem !important;
+        font-weight: 800 !important;
+        color: #333;
     }
     .optionsToggle {
         background: transparent;
@@ -136,7 +147,12 @@
         }
     }
     label {
-        font-size: 90% !important;
+        font-size: 0.875rem !important;
+        font-weight: 500 !important;
+        color: #333;
+    }
+    input[type="radio"]:checked+label {
+        font-weight: 800 !important;
     }
     .anyPeriod {
         font-weight: bold !important;
