Estilos para as colunas quadradas

--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -516,6 +516,12 @@ header.inverter .search-wrapper {
         font-size: 1.5rem;
         color: #222;
     }
+    p {
+        color: #222;
+        font-weight: 500;
+        font-size: 1rem !important;
+        line-height: 1.6rem !important;
+    }
 }
 
 /* box escuro */
