--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -4,20 +4,20 @@
 
 $bg-color: #fff;
 $main-font: 'Raleway', sans-serif;
-$main-fontsize: 1em;
+$main-fontsize: 1rem;
 $main-width: 100%;
 $main-color: #2969bd;
 $coluna-1: 300px;
 $coluna-2: 300px;
 $grid-gutter: 10px;
-$content-width: 1140px;
+$content-width: 1150px;
 
 $top-color: #2969bd;
 $top-text: #fff;
 $top-link: #fff;
 
 $nav-color: #fff;
-$nav-link: #000;
+$nav-link: #333;
 
 $txt-color: #282828;
 $link-color: #0094ff;
@@ -28,8 +28,14 @@ $byline-color: #a6a6a6;
 $tile-link: #333;
 
 $footer-color: #f1f1f1;
-$footer-text: #272727;
-$footer-link: #272727;
+$footer-text: #222222;
+$footer-link: #222222;
+
+
+/* variacao de cor do header */
+$fale-conosco: #244a7c;
+$noticias: #06acff;
+$central-conteudo: #000;
 
 
 /********** Estilos Básicos do IDG **********/
