--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -52,7 +52,8 @@ p.tile-description {
 .tile .outstanding-header {
     width: 100%;
     text-align: center;
-    padding: 30px 0 10px 0;
+    padding: 0;
+    margin-bottom: -12px;
 
     h2 {
         font-size: 2.25rem;
