--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -43,7 +43,7 @@ header#main-header {
       display: list-item;
       margin-bottom: 1.25rem;
     }
-    #portal-redes li {
+    .portal-redes li {
       display: inline-block;
     }
   }
