Remove formataações desnecessarias

--- a/webpack/app/scss/_footer.scss
+++ b/webpack/app/scss/_footer.scss
@@ -46,6 +46,7 @@
 	/*logos do footer vindos da barra */
 	#wrapper-footer-brasil {
 		max-width: $content-width;
+		margin-top: 60px;
 	}
 	#wrapper-footer-brasil .logo-acesso-footer {
 		float: right;
