--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -111,6 +111,16 @@ p.tile-description {
     text-indent: -5000px;
 }
 
+/* tile centralizado */
+.tile-centralizado {
+    text-align: center;
+    .tile-description {
+        color: #888;
+    }
+    img.left, img.right {
+        float: none;
+    }
+}
 
 /* lista-blocos */
 
