Ajustes visuais no tile de fundo branco

--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -72,6 +72,11 @@ div.warning {
   }
 }
 
+/* cor de fundo das capas */
+.portaltype-collective-cover-content #wrapper {
+  background-color: #f8f8f8;
+}
+
 
 /* ordem dos campos de conteudo */
 #content, #viewlet-below-content-title, article {
