Ajustes de estilos para os tiles NITF basicos

--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -73,7 +73,7 @@ div.warning {
 }
 
 /* cor de fundo das capas */
-.portaltype-collective-cover-content #wrapper {
+body.portaltype-collective-cover-content {
   background-color: #f8f8f8;
 }
 
