--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -126,7 +126,8 @@ p.tile-description {
     h1:before, h2:before, h3:before, h4:before {
         content: "-";
         @include sprite($vinculada);
-        display: inline-block;
+        display: block;
+        float: left;
         text-indent: -3000px;
     }
 }
