Update new theme colors

--- a/webpack/app/branco/brasilgovtemas.scss
+++ b/webpack/app/branco/brasilgovtemas.scss
@@ -6,14 +6,14 @@ $bg-color: #fff;
 $main-font: 'Raleway', sans-serif;
 $main-fontsize: 1rem;
 $main-width: 100%;
-$main-color: #2969bd;
+$main-color: #fbfbfb;
 $secondary-color: #06acff;
 $coluna-1: 300px;
 $coluna-2: 300px;
 $grid-gutter: 10px;
 $content-width: 1150px;
 
-$top-color: #2969bd;
+$top-color: $main-color;
 $top-text: #fff;
 $top-link: #fff;
 
@@ -35,7 +35,7 @@ $footer-link: #222222;
 
 /* variacao de cor do header */
 $fale-conosco: #244a7c;
-$noticias: #06acff;
+$noticias: #ff6d26;
 $central-conteudo: #000;
 
 
