--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -13,7 +13,7 @@ $coluna-2: 300px;
 $grid-gutter: 10px;
 $content-width: 1150px;
 
-$top-color: #2969bd;
+$top-color: $main-color;
 $top-text: #fff;
 $top-link: #fff;
 
