Novos estilos para os tiles

--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -7,6 +7,7 @@ $main-font: 'Raleway', sans-serif;
 $main-fontsize: 1rem;
 $main-width: 100%;
 $main-color: #2969bd;
+$secondary-color: #06acff;
 $coluna-1: 300px;
 $coluna-2: 300px;
 $grid-gutter: 10px;
