--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -39,7 +39,7 @@
 }
 
 .tile-subtitle {
-    color: #06acff;
+    color: $link-color;
     font-size: 0.875rem !important;
     font-weight: bold;
     margin-bottom: 0 !important;
