--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -17,8 +17,7 @@ header#main-header {
     justify-content: space-between;
     align-items: center;
     padding: 0;
-    height: 80px;
-    border-bottom: 1px solid rgba(256, 256, 256, 0.2);
+    border-bottom: 1px solid $top-border-color;
   }
 
 /********** Navegacao **********/
@@ -111,6 +110,7 @@ ul.submenu {
     cursor: pointer;
     text-indent: -3000px;
     @include sprite($nav);
+    filter: $top-icons;
   }
   .ico-busca {
     display: inline-block;
@@ -184,6 +184,7 @@ ul.submenu {
     position: absolute;
     left: 0;
     @include sprite($contraste);
+    filter: $top-icons;
   }
   .link-vlibras {
     display: inline-block;
@@ -197,6 +198,7 @@ ul.submenu {
     top: 3px;
     left: 0;
     @include sprite($vlibras);
+    filter: $top-icons;
   }
 }
 
@@ -214,7 +216,6 @@ ul.submenu {
 
   h1, #portal-title {
     display: inline;
-    color: $top-link;
     font-size: 1.625rem;
     font-weight: 900;
   }
@@ -262,6 +263,7 @@ ul.submenu {
     border: 0;
     background: #fff;
     border-radius: 30px;
+    border: 1px solid $top-border-color;
   }
   .searchField {
     border: none;
@@ -379,10 +381,64 @@ header.inverter {
 /* variacao de cor do header */
 .section-fale-conosco header#main-header {
   background-color: $fale-conosco;
+  color: $fale-conosco-text;
+  a:link,
+  a:hover,
+  a:visited {
+    text-decoration: none;
+    color: $fale-conosco-link;
+  }
+  .header-icons .ico-navegacao,
+  .header-accessibility .link-contraste:before,
+  .header-accessibility .link-vlibras:before {
+    filter: $fale-conosco-icons;
+  }
+  #portal-searchbox fieldset  {
+    border: 1px solid $fale-conosco-border-color;
+  }
+  .header-wrapper {
+    border-bottom-color: $fale-conosco-border-color;
+  }
 }
 .portaltype-collective-nitf-content header#main-header {
   background-color: $noticias;
+  color: $noticias-text;
+  a:link,
+  a:hover,
+  a:visited {
+    text-decoration: none;
+    color: $noticias-link;
+  }
+  .header-icons .ico-navegacao,
+  .header-accessibility .link-contraste:before,
+  .header-accessibility .link-vlibras:before {
+    filter: $noticias-icons;
+  }
+  #portal-searchbox fieldset {
+    border: 1px solid $noticias-border-color;
+  }
+  .header-wrapper {
+    border-bottom-color: $noticias-border-color;
+  }
 }
 .section-centrais-de-conteudo header#main-header {
   background-color: $central-conteudo;
+  color: $central-conteudo-text;
+  a:link,
+  a:hover,
+  a:visited {
+    text-decoration: none;
+    color: $central-conteudo-link;
+  }
+  .header-icons .ico-navegacao,
+  .header-accessibility .link-contraste:before,
+  .header-accessibility .link-vlibras:before {
+    filter: $central-conteudo-icons;
+  }
+  #portal-searchbox fieldset {
+    border: 1px solid $central-conteudo-border-color;
+  }
+  .header-wrapper {
+    border-bottom-color: $central-conteudo-border-color;
+  }
 }
