--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -16,7 +16,7 @@ header#main-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0;
+    padding: 12px 0;
     border-bottom: 1px solid $top-border-color;
   }
 
@@ -117,6 +117,7 @@ ul.submenu {
     cursor: pointer;
     text-indent: -3000px;
     @include sprite($busca);
+    filter: $top-icons;
   }
 }
 .header-wrapper {
