Ajustes de estilo na busca expandida

--- a/webpack/app/branco/brasilgovtemas.scss
+++ b/webpack/app/branco/brasilgovtemas.scss
@@ -18,6 +18,7 @@ $top-text: #222;
 $top-link: #222;
 $top-icons: invert(100%);
 $top-border-color: rgba(0, 0, 0, 0.1);
+$top-busca-ativa: #fff;
 
 $nav-color: #fff;
 $nav-link: #333;
