--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -18,6 +18,7 @@ $top-text: #fff;
 $top-link: #fff;
 $top-icons: none;
 $top-border-color: rgba(256, 256, 256, 0.2);
+$top-busca-ativa: #fff;
 
 $nav-color: #fff;
 $nav-link: #333;
