Ajusta os icones do contraste

--- a/webpack/app/scss/_contrast.scss
+++ b/webpack/app/scss/_contrast.scss
@@ -154,6 +154,17 @@ body.contraste #viewlet-social-like>div:before,
     filter: invert(100%);
 }
 
+/* icones do topo */
+body.contraste,
+body.folder_contraste {
+  .header-icons .ico-busca, 
+  .header-icons .ico-navegacao,
+  .header-accessibility .link-contraste:before,
+  .header-accessibility .link-vlibras:before {
+    filter: none;
+  }
+}
+
 /* contraste dos icones */
 body.contraste,
 body.folder_contraste {
