--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -16,7 +16,7 @@ header#main-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 12px 0;
+    height: 80px;
     border-bottom: 1px solid $top-border-color;
   }
 
