Corrige borda do topo na busca ativa

--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -295,7 +295,7 @@ header#main-header.busca-ativa {
     color: #222 !important;
   }
   .header-wrapper {
-    border-bottom: 1px solid #e4e4e4;
+    border-bottom: 1px solid #e4e4e4 !important;
   }
   .header-icons {
     border-right: 1px solid #e4e4e4;
